--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "mongodb": "^4.5.0"
+    "mongodb": "^4.5.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
